--- a/style.css
+++ b/style.css
@@ -627,7 +627,7 @@ text-align: center;
     border: 1px solid #969292;
     width: 85%;
     left:7%;
-  
+  font-size: 12px;
 display: none; 
 }
 
@@ -643,6 +643,7 @@ display: none;
     width: 100%;
     border-collapse: collapse;
     text-align: center;
+
   }
   th, td {
     border: 1px solid #dddddd;
@@ -786,6 +787,78 @@ height: 25px;
 
 
 #errorMssTypeFlat  select {
+    color: #b5d0dd;
+    background: #444141;
+    border: 2px solid rgb(116, 104, 104); 
+    position: relative;
+    cursor: pointer; 
+height: 25px;
+text-align: center;
+}
+ 
+
+
+
+
+
+
+#errorMssType{
+    color: #ffffffb3;
+    background: #323232;
+        border-radius: 6px;
+text-align: center;
+font-size: 16px;
+position: absolute;
+overflow: auto; 
+word-wrap: break-word;
+height: 17%;
+width: 20%;
+left: 40%;
+top: 75%;
+/* display: none; */
+border: 1px solid white; 
+
+text-align: center;
+}
+
+
+
+#errorMssType p{
+    position: relative;
+    overflow: auto; 
+    word-wrap: break-word;
+    margin: 1px; 
+    color: #bad2e0;
+
+text-align: center;
+top: -10px;
+}
+
+
+
+#errorMssSelectType{
+    color: #b5d0dd;
+    background: #444141;
+    border: 2px solid rgb(116, 104, 104); 
+    position: relative;
+    cursor: pointer; 
+height: 25px;
+top: 35px;
+}
+
+
+#errorMssSelectTypeStructure{
+    color: #b5d0dd;
+    background: #444141;
+    border: 2px solid rgb(116, 104, 104); 
+    position: relative;
+    cursor: pointer; 
+height: 25px;
+top: 80px;
+}
+
+
+#errorMssType  select {
     color: #b5d0dd;
     background: #444141;
     border: 2px solid rgb(116, 104, 104); 
